# Tracker

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  main.py  pyproject.toml  requirements.txt  run_app.py  run_tests.py  setup-gitlab-runner.sh
.specify/memory/: constitution.md
.specify/setup/: environment.md
.specify/specs/: fitness_score_spec.md
.specify/templates/: module_template.py
.streamlit/: config.toml
app/core/: bootloader.py  config.py  exceptions.py  logging.py
app/database/: connection.py  migrations.py
app/database/migrations/: 0001_init.sql  0002_sprint2_schema.sql  0003_sprint3_schema.sql  0004_sprint4_schema.sql  0005_sprint5_schema.sql  0006_sprint6_schema.sql  0007_sprint7_schema.sql
app/models/: __init__.py  ai.py  analytics.py  domain.py  habit_recovery.py  nutrition.py  workout.py
app/modules/: __init__.py  ai.py  analytics.py  base.py  habit.py  nutrition.py  recovery.py  workout.py
app/registry/: __init__.py  module_registry.py
app/repositories/: __init__.py  ai.py  analytics.py  base.py  body_measurement.py  exercise.py  food.py  goal.py  habit.py  habit_log.py  meal_log.py  nutrition.py  recovery.py  sleep.py  user.py  workout.py  workout_log.py
app/services/: __init__.py  ai_coach.py  analytics.py  exercise.py  food.py  goal.py  habit.py  nutrition.py  recovery.py  user.py  workout.py
app/ui/: app.py  style.css
app/ui/pages/: __init__.py  ai_coach.py  analytics.py  dashboard.py  habits.py  nutrition.py  recovery.py  reports.py  settings.py  workout.py
app/utils/: performance.py  validators.py
docs/: architecture_overview.md  contracts_and_schemas.md  engineering_rules.md  system_lifecycle.md
scripts/: health_check.py
tests/: test_config.py  test_database.py  test_integration.py  test_performance.py  test_repository.py  test_sprint2.py  test_sprint3.py  test_sprint4.py  test_sprint5.py  test_sprint6.py  test_sprint7.py  test_sprint8.py
